#34 feat:테스트 실행시 동적 로드 허용